[package]
name = "cataclysm"
version = "0.1.0"
license = "MIT"
description = "A simple http framework"
repository = "https://github.com/Malanche/cataclysm.git"
authors = ["Carlos Malanche <carlos.malanche.f@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.1.1", features = ["full"]}
ctrlc = "3.1.7"
serde = {version = "1.0.124", features = ["derive"]}
log = {version = "0.4.14", features = ["std"]}
futures = "0.3.13"
async-trait = "0.1.48"
chrono = "0.4.19"
# For the terminal logger
colored = "2.0.0"
winapi = "0.3.9"