[package]
name = "cataclysm"
version = "0.2.0-alpha.11"
license = "MIT"
description = "A simple http framework"
repository = "https://github.com/Malanche/cataclysm.git"
authors = ["Carlos Malanche <carlos.malanche.f@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ws = ["cataclysm-ws"]
demon = ["ws", "apocalypse"]

[dev-dependencies]
criterion = {version = "0.3.5", features = ["async_tokio"]}
reqwest = "0.11.4"
colored = "2.0.0"
winapi = "0.3.9"

[dependencies]
tokio = {version = "1.11.0", features = ["full"]}
ctrlc = "3.1.7"
regex = "1.5.4"
serde = {version = "1.0.124", features = ["derive"]}
serde_json = "1.0.67"
log = {version = "0.4.14", features = ["std"]}
futures = "0.3.13"
chrono = "0.4.19"
ring = "0.16.20"
base64 = "0.13.0"
cookie = {version = "0.15.0", features = ["percent-encode"]}
lazy_static = "1.4.0"
libflate = "1.1.1"
url = "2.2.2"
serde_qs = "0.8.4"
async-trait = "0.1.51"
bytes = "1.1.0"
cataclysm-ws = {version = "0.1.0", optional = true}
apocalypse = {version = "0.2.3", features = ["ws"], optional = true}

[[bench]]
name = "per_second"
harness = false