[package]
name = "cataclysm-ws"
license = "MIT"
description = "Auxiliary websockets crate for cataclysm"
repository = "https://github.com/Malanche/cataclysm"
authors = ["Carlos Malanche <carlos.malanche.f@gmail.com>"]
version = "0.3.0-beta.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["full"]}
log = "0.4.20"
bytes = "1.5.0"
rand = "0.8.5"