[package]
name = "cataclysm-ws"
license = "MIT"
description = "Auxiliary websockets crate for cataclysm"
repository = "https://github.com/Malanche/cataclysm"
authors = ["Carlos Malanche <carlos.malanche.f@gmail.com>"]
version = "0.4.0-beta.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full_log = []

[dependencies]
tokio = {version = "1.40.0", features = ["full"]}
log = "0.4.22"
bytes = "1.9.0"
rand = "0.8.5"