[package]
name = "cataclysm"
version = "0.3.0-beta.2"
license = "MIT"
description = "A simple http framework"
repository = "https://github.com/Malanche/cataclysm.git"
authors = ["Carlos Malanche <carlos.malanche.f@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
full_log = []
stream = []
ws = ["stream", "cataclysm-ws"]

[dev-dependencies]
criterion = {version = "0.3.5", features = ["async_tokio"]}
reqwest = "0.11.4"
colored = "2.0.0"
winapi = "0.3.9"
cataclysm-ws = {version = "0.3.0-beta.2", path = "../cataclysm-ws"}

[dependencies]
tokio = {version = "1.36.0", features = ["full"]}
ctrlc = "3.4.1"
regex = "1.9.6"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
log = {version = "0.4.20", features = ["std"]}
futures = "0.3.28"
chrono = "0.4.31"
ring = "0.17.0"
base64 = "0.21.4"
cookie = {version = "0.16.0", features = ["percent-encode"]}
lazy_static = "1.4.0"
libflate = "2.0.0"
url = "2.4.1"
serde_qs = "0.12.0"
bytes = "1.5.0"
cataclysm-ws = {version = "0.3.0-beta.2", path = "../cataclysm-ws", optional = true}

[[bench]]
name = "per_second"
harness = false