[package]
name = "cataclysm"
version = "0.4.0-beta.4"
license = "MIT"
description = "A simple http framework"
repository = "https://github.com/Malanche/cataclysm.git"
authors = ["Carlos Malanche <carlos.malanche.f@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
full_log = []
stream = []
ws = ["stream", "cataclysm-ws"]

[dev-dependencies]
criterion = {version = "0.5.1", features = ["async_tokio"]}
reqwest = "0.12.8"
colored = "2.1.0"
winapi = "0.3.9"
cataclysm-ws = {version = "0.4.0-beta.2", path = "../cataclysm-ws"}

[dependencies]
tokio = {version = "1.44.1", features = ["full"]}
ctrlc = "3.4.5"
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
log = {version = "0.4.26", features = ["std"]}
futures = "0.3.31"
chrono = "0.4.40"
ring = "0.17.14"
base64 = "0.22.1"
cookie = {version = "0.18.1", features = ["percent-encode"]}
lazy_static = "1.5.0"
url = "2.5.4"
serde_qs = "0.14.0"
bytes = "1.10.1"
percent-encoding = "2.3.1"
cataclysm-ws = {version = "0.4.0-beta.2", path = "../cataclysm-ws", optional = true}

[[bench]]
name = "per_second"
harness = false